--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "start": "vite preview",
-    "postcss": "ts-node -O '{\"module\":\"CommonJS\"}' postcss.config.ts"
+    "postcss": "ts-node -O '{\"module\":\"CommonJS\"}' postcss.config.ts",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
@@ -22,7 +25,7 @@
     "tailwindcss": "^3.4.16",
     "tsx": "^4.19.2",
     "typescript": "~5.6.2",
-    "vite": "^6.0.2"
+    "vite": "^6.0.3"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -31,11 +34,15 @@
     "@mantine/hooks": "^7.14.3",
     "@tanstack/react-query": "^5.62.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   }
 }
